          JSR-311 draft specification. Contributed by Stephan Koops.
        - All HTTP server connectors now expose the client certificates
          using the "org.restlet.https.clientCertificates" request 
          attribute. Contributed by Bruno Harbulot.
        - Updated Java Activation Framework to version 1.1.1.
        - Updated JavaMail library to version 1.4.1.
    - Misc
        - Reformatting of the changes log. Contributed by Avi Flax.
        - All Component subclasses now use a main method that throws 
          exceptions and takes a string array as parameter.
        - More precise log message for a Resource with no variant.
        - Otpimized Eclipse dependencies by leveraging reexport option.
        - Updated Spring to version 2.5.2.
        - Improved handling of connectors created without a protocol.
          Contributed by Avi Flax.
        - Representations returned by the CLAP connector now have their
          modification date set if it is based on a file. Suggested by
          Keke.
        - Refactored and improved logging for Guard and challenge
          processing. Suggested by Alex Milowski.
        - Updated Reference's Javadocs to mention that getters do not 
          automatically do URI decoding. Suggested by Paul J. Lucas.
        - Refactored NRE helpers hiearchy to take advantage of generics
          and remove duplicatations.
        - Added SSL unit test contributed by Bruno Harbulot.
        - Completed the list of known media-types with Tomcat's 
          entries. Reported and contributed by Alex Milowski.
 - 1.1 Milestone 2 (2008-02-29)
    - Bugs fixed
        - Fixed NPE in Connector class. Reported by Rob Heittman and
          fixed by Tim Peierls.
        - WriterRepresentation was missing a default implementation for
          getReader() abstract method.
        - If an error is found in HttpClientHelper.sendRequest(),
          StreamClientHelper ignores it and continues to parse the