@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.0.xsd">
+	xmlns:util="http://www.springframework.org/schema/util"
+	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util-2.5.xsd">
 
 	<bean id="component"
 		class="org.restlet.ext.spring.SpringComponent">
@@ -42,9 +43,10 @@
 		</property>
 	</bean>
 
-	<bean id="application"
-		class="org.restlet.ext.spring.SpringApplication">
-		<constructor-arg ref="component" />
+	<bean id="application" class="org.restlet.Application">
+		<constructor-arg>
+			<util:property-path path="component.context" />
+		</constructor-arg>
 
 		<property name="root">
 			<bean class="org.restlet.ext.spring.SpringRouter">
