@@ -51,6 +51,8 @@ Changes log
           attribute. Contributed by Bruno Harbulot.
         - Updated Java Activation Framework to version 1.1.1.
         - Updated JavaMail library to version 1.4.1.
+        - Removed the SpringApplication class as an XML configuration
+          alternative is now documented. 
     - Misc
         - Reformatting of the changes log. Contributed by Avi Flax.
         - All Component subclasses now use a main method that throws 
